iconify extension for scotland flag.

--- a/index.qmd
+++ b/index.qmd
@@ -33,3 +33,5 @@ My research interests are in early childhood development and skill formation, th
 I am currently a visiting student with Young Lives at the University of Oxford, hosted by [Marta Favara](https://sites.google.com/site/martafavara/). In winter 2023 I will be a visiting researcher with Grupo De Análisis para el Desarrollo, in Lima, Peru.
 
 you can view my full CV [here](https://gerrymcquade.github.io/cv/GM_cv.pdf).
+
+Proudly {{< iconify flag:gb-sct-4x3 >}}.
