add extensions to resources for index page

--- a/index.qmd
+++ b/index.qmd
@@ -1,6 +1,7 @@
 ---
 title: "Gerald McQuade"
 image: avatar.jpeg
+resources: /_extensions/mcanouil/iconify/*
 about:
   id: hero-heading
   template: trestles
