update research summary and index

--- a/index.qmd
+++ b/index.qmd
@@ -33,6 +33,6 @@ PhD candidate in economics at [Lancaster University Management School](https://w
 
 My research interests are in early childhood development and skill formation, the socio-economic impacts of climate and environmental shocks, and the interaction between these two processes in low and middle income contexts.
 
-I am currently a visiting researcher with Grupo De Análisis para el Desarrollo, in Lima, Peru (see my [profile here](https://www.grade.org.pe/en/investigadores/personal/gerald-mcquade/)). Previously, I was a visiting researcher with Young Lives at the University of Oxford during Trinity & Summer Term 2023, hosted by [Marta Favara](https://sites.google.com/site/martafavara/).
+I was recently a visiting researcher with Grupo De Análisis para el Desarrollo, in Lima, Peru (see my [profile here](https://www.grade.org.pe/en/investigadores/personal/gerald-mcquade/)). Previously, I was a visiting researcher with Young Lives at the University of Oxford during Trinity & Summer Term 2023, hosted by [Marta Favara](https://sites.google.com/site/martafavara/).
 
-You can view my CV here: [non-academic](https://gerrymcquade.github.io/cv/GM_cv_nonac.pdf) and [academic](https://gerrymcquade.github.io/cv/GM_cv.pdf).
+I will be on the job market in 2024-2025. You can view my CV here: [non-academic](https://gerrymcquade.github.io/cv/GM_cv_nonac.pdf) and [academic](https://gerrymcquade.github.io/cv/GM_cv.pdf).
