--- a/research.qmd
+++ b/research.qmd
@@ -4,23 +4,25 @@ title: "Research"
 resources: "[GM]earlyliferainfall_personalitytraits_0623.pdf"
 ---
 
-#### Works in Progress
+#### Academic work
 
 **Research Papers**
 
--   Some people feel the rain; others just get wet: Early-life rainfall and personality trait formation in Peru \[[Draft]([GM]earlyliferainfall_personalitytraits_0623.pdf)\]
+-   Some people feel the rain; others just get wet: Early-life rainfall and personality trait formation in Peru \[[Draft](%5BGM%5Dearlyliferainfall_personalitytraits_0623.pdf)\]
 
--   Additional returns of extending the school day: Estimating sibling spillovers using a regression discontinuity design - *with Catherine Porter, Marta Favara & Alan Sanchez*
+-   Additional returns of extending the school day: Estimating sibling spillovers using a regression discontinuity design - *with Catherine Porter & Alan Sanchez*
 
 -   Think of the children: Inter-generational effects of drought exposure on offspring outcomes
 
+-   A sound methodology: Measuring experiences of violent conflict through audio self-interviews - _with Sophie von Russdorf, Laura Ahlborn, Alessandra Hidalgo & Marta Favara_
+
 **Technical Notes**
 
--   Identifying climate shocks in Young Lives communities: Estimating weather conditions using a global gridded time series \| Young Lives
+-   Identifying climate shocks in Young Lives communities: Estimating weather conditions using a global gridded time series \| Young Lives \| *with Marta Favara* \[[link](https://www.younglives.org.uk/publications/identifying-climate-shocks-young-lives-communities-estimating-weather-conditions-using)\]
 
 -   Selection and validation of socio-emotional skill measures in round 5 of the Young Lives survey \| Young Lives \| *with Catherine Porter, Marta Favara & Mark Mitchell*
 
----------------
+------------------------------------------------------------------------
 
 #### Other contributions
 
@@ -28,14 +30,18 @@ resources: "[GM]earlyliferainfall_personalitytraits_0623.pdf"
 
 -   Deaths related to drug poisoning in England and Wales: 2018 registrations -- ONS - *with Emyr John & Asim Butt* \[[link](https://cy.ons.gov.uk/peoplepopulationandcommunity/birthsdeathsandmarriages/deaths/bulletins/deathsrelatedtodrugpoisoninginenglandandwales/2018registrations)\]
 
----------------
+**Software**
+
+-   *sideytab:* a module for producing sideways esttab tables \[[Github repository](https://github.com/gerrymcquade/sideytab)\]
+
+------------------------------------------------------------------------
 
 #### Conference Presentations
 
 **2023**
 
--   2nd International Conference on Development Economics; 36th European Society of Population Economics conference; 1st Welfare and Policy conference; Inaugural Essex PhD Conference in Applied Economics; NWSSDTP PhD Conference in Economics; 12th Summer School in Development Economics Workshop (_invited_)
+-   14th Bolivian Conference on Development Economics; Conferencia Internacional de Desarrollo Económico PUCP; 2nd International Conference on Development Economics; 36th European Society of Population Economics conference; 1st Welfare and Policy conference; Inaugural Essex PhD Conference in Applied Economics; NWSSDTP PhD Conference in Economics; Lancaster Applied Micro Workshop; 12th Summer School in Development Economics Workshop (*invited*)
 
-**2019 - 2022** 
+**2019 - 2022**
 
--   Lancaster University PGR conference; NWSSDTP Conference; CLOSER – Preparing for the Future III;  SGPE Conference; LUMS PhD Seminar Series; Scottish Economics Conference (_student speaker_) 
+-   Lancaster University PGR conference; NWSSDTP Conference; CLOSER -- Preparing for the Future III; SGPE Conference; LUMS PhD Seminar Series; Scottish Economics Conference (*student speaker*)
