update CV and publications

--- a/CV_page.qmd
+++ b/CV_page.qmd
@@ -50,6 +50,8 @@ View my full CV here: [non-academic](https://gerrymcquade.github.io/cv/GM_cv_non
 
 -   Quantitative Methods for Economics (ECON 103) \| Additional Workshops
 
+-   LUMS Maths and Statistics Hub \| 1-to-1 Workshops
+
 **Heriot Watt University** \| 2019 - 2020
 
 -   Intermediate Microeconomics (C28IN) \| Workshops
