--- a/index.qmd
+++ b/index.qmd
@@ -35,4 +35,4 @@ My research interests are in early childhood development and skill formation, th
 
 I was recently a visiting researcher with Grupo De Análisis para el Desarrollo, in Lima, Peru (see my [profile here](https://www.grade.org.pe/en/investigadores/personal/gerald-mcquade/)). Previously, I was a visiting researcher with Young Lives at the University of Oxford during Trinity & Summer Term 2023, hosted by [Marta Favara](https://sites.google.com/site/martafavara/).
 
-I will be on the job market in 2024-2025. You can view my CV here: [non-academic](https://gerrymcquade.github.io/cv/GM_cv_nonac.pdf) and [academic](https://gerrymcquade.github.io/cv/GM_cv.pdf).
+I will be on the job market in 2024-2025. You can view [my CV here](https://gerrymcquade.github.io/cv/GM_cv.pdf).
