update about, add footer, add new icons, update cv page

--- a/CV_page.qmd
+++ b/CV_page.qmd
@@ -8,7 +8,7 @@ View [my full CV here](https://gerrymcquade.github.io/cv/GM_cv.pdf).
 
 #### Education
 
-**Lancaster University** \| PhD Economics \| 2020 -
+**Lancaster University** \| PhD Economics \| 2020 - Expected March 2025
 
 *Advisors: Catherine Porter & Saurabh Singhal*
 
@@ -26,9 +26,11 @@ View [my full CV here](https://gerrymcquade.github.io/cv/GM_cv.pdf).
 
 ------------------------------------------------------------------------
 
-#### Research Experience
+#### Experience
 
-**Lancaster University** \| *Lancaster, UK* \| Teaching Associate \| 2024-
+**Young Lives** \| Oxford, UK \| Quantitative Research Officer \| 2025 -
+
+**Lancaster University** \| *Lancaster, UK* \| Teaching Associate \| 2024 - 2025
 
 **Grupo De Análisis para el Desarrollo** \| *Lima, Peru* \| Visiting Researcher \| Winter 2023
 
