small updates to bio

--- a/CV_page.qmd
+++ b/CV_page.qmd
@@ -8,9 +8,11 @@ View [my full CV here](https://gerrymcquade.github.io/cv/GM_cv.pdf).
 
 #### Education
 
-**Lancaster University** \| PhD Economics \| 2020 - Expected March 2025
+**Lancaster University** \| PhD Economics \| 2020 - March 2025
 
 *Advisors: Catherine Porter & Saurabh Singhal*
+
+*Examiners: Leah Bevis & Christophe Jalil Nordman (External), Maria Navarro Paniagua (Internal), Aurelie Slechten (Chair)*
 
 **University of Oxford, ODID** \| Visiting Research Student \| Trinity term 2023
 
