--- a/research.qmd
+++ b/research.qmd
@@ -58,9 +58,9 @@ A growing body of research examines how climatic variables such as precipitation
 
 #### Conference Presentations
 
-**2023 - 2024**
+**2023 - 2025**
 
--   14th Bolivian Conference on Development Economics; Conferencia Internacional de Desarrollo Económico PUCP; 2nd International Conference on Development Economics; 36th European Society of Population Economics conference; 1st Welfare and Policy conference; Inaugural Essex PhD Conference in Applied Economics; NWSSDTP PhD Conference in Economics; Lancaster Applied Micro Workshop; 12th Summer School in Development Economics Workshop (*invited*)
+-   40th European Economic Association Congress; 14th Bolivian Conference on Development Economics; Conferencia Internacional de Desarrollo Económico PUCP; 2nd International Conference on Development Economics; 36th European Society of Population Economics conference; 1st Welfare and Policy conference; Inaugural Essex PhD Conference in Applied Economics; NWSSDTP PhD Conference in Economics; Lancaster Applied Micro Workshop; 12th Summer School in Development Economics Workshop (*invited*)
 
 **2019 - 2022**
 
