--- a/index.qmd
+++ b/index.qmd
@@ -25,10 +25,10 @@ about:
     #   href: "https://www.grade.org.pe/en/investigadores/personal/gerald-mcquade/"
 ---
 
-I am the Quantitative Research Officer for The [Young Lives](https://www.younglives.org.uk/people/countryteams/gerald-mcquade) Research Hub on Climate Change and Environmental Shocks, based at the Oxford Department of International Development (ODID), University of Oxford. I recently completed my PhD in economics at [Lancaster University Management School](https://www.lancaster.ac.uk/lums/people/gerald-mcquade).
+I am the Quantitative Research Officer for The [Young Lives](https://www.younglives.org.uk/people/countryteams/gerald-mcquade) Research Hub on Climate Change and Environmental Shocks, based at the Oxford Department of International Development (ODID), University of Oxford. I recently completed my PhD in Economics at [Lancaster University Management School](https://www.lancaster.ac.uk/lums/people/gerald-mcquade).
 
 My research interests are in early childhood development and skill formation, and the socio-economic and health impacts of extreme climate and environmental shocks in low- and middle-income countries. I am also interested in the role of social protection programmes in mitigating the long-term effects of early life shock exposure, as well as investigating interactions with ongoing armed conflict and the COVID-19 pandemic.
 
-I previously worked as a Teaching Associate at Lancaster University, and have held visiting Researcher positions at GRADE and the University of Oxford. Prior to my PhD I worked as a Statistical Officer with the UK Office for National Statistics and as a Research Assistant with HERU at the University of Aberdeen. I also hold an MSc and MA in Economics from the University of Edinburgh and Heriot Watt University, respectively.
+I previously worked as a Teaching Associate at Lancaster University, and have held Visiting Researcher positions at GRADE and the University of Oxford. Prior to my PhD I worked as a Statistical Officer with the UK Office for National Statistics and as a Research Assistant with HERU at the University of Aberdeen. I also hold an MSc and MA in Economics from the University of Edinburgh and Heriot Watt University, respectively.
 
 You can view [my CV here](https://gerrymcquade.github.io/cv/GM_cv.pdf).
